--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Miss Photomodel</title>
 </head>
-<body>
-    <h1>Welcome to Miss Photomodel</h1>
-    <p>This is the homepage of your modeling agency.</p>
-</body>
+ <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Miss Photomodel</title>
+    <link rel="stylesheet" href="style.css">
 </html>
