--- a/models.html
+++ b/models.html
@@ -3,19 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Our Models</title>
+    <title>Our Models - Miss Photomodel</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>Our Models</h1>
-        <nav>
-            <a href="index.html">Home</a> |
-            <a href="models.html">Models</a> |
-            <a href="about.html">About</a> |
-            <a href="contact.html">Contact</a>
-        </nav>
-    </header>
-    <p>Meet our professional models.</p>
+    <h1>Our Models</h1>
+    <div class="model">
+        <img src="images/model1.jpg" alt="Model Name">
+        <h2>Lilia</h2>
+        <p>Age: 22</p>
+        <p>Height: 175 cm</p>
+        <p>Country: Armenia</p>
+    </div>
+
+    <div class="model">
+        <img src="images/model2.jpg" alt="Model Name">
+        <h2>Model Name</h2>
+        <p>Age: 24</p>
+        <p>Height: 180 cm</p>
+        <p>Country: France</p>
+    </div>
+
 </body>
 </html>
