--- a/about.html
+++ b/about.html
@@ -1,21 +1,50 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us</title>
-    <link rel="stylesheet" href="style.css">
+  <title>MPmodels</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1>About Us</h1>
-        <nav>
-            <a href="index.html">Home</a> |
-            <a href="models.html">Models</a> |
-            <a href="about.html">About</a> |
-            <a href="contact.html">Contact</a>
-        </nav>
-    </header>
-    <p>Miss Photomodel is a premium modeling agency.</p>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Services</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </nav>
+    <h1>The MPmodels</h1>
+  </header>
+  <main>
+    <section class="hero">
+      <h2>Welcome to The MPmodels</h2>
+      <p>We help you stay ahead of the curve.</p>
+      <button>Learn More</button>
+    </section>
+    <section class="features">
+      <h2>Our Services</h2>
+      <ul>
+        <li>
+          <i class="fas fa-trophy"></i>
+          <h3>Market Research</h3>
+          <p>Stay ahead of the competition.</p>
+        </li>
+        <li>
+          <i class="fas fa-chart-line"></i>
+          <h3>Trend Analysis</h3>
+          <p>Identify emerging trends.</p>
+        </li>
+        <li>
+          <i class="fas fa-bullseye"></i>
+          <h3>Strategic Planning</h3>
+          <p>Align your business with the market.</p>
+        </li>
+      </ul>
+    </section>
+  </main>
+  <footer>
+    <p>&copy; 2025 The MPmdels</p>
+  </footer>
 </body>
 </html>
